--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,3 +35,7 @@
   <md-grid-tile><i class="material-icons">explore</i></md-grid-tile>
   <md-grid-tile><i class="material-icons">collections_bookmark</i></md-grid-tile>
 </md-grid-list>
+
+
+<!--explore component-->
+<app-explore></app-explore>
