--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -1,30 +1,30 @@
 <md-grid-list cols="2" md-gutter-gt-md="60px" md-gutter-md="30px" md-gutter-sm="2px" md-row-height="1:1">
-  <md-grid-tile class="image">
+  <md-grid-tile class="image" routerLink="genres">
     <img src="assets/images/genres.jpg" alt="Genres">
     <h4>Genres</h4>
   </md-grid-tile>
 
-  <md-grid-tile class="image">
+  <md-grid-tile class="image" routerLink="top-picks">
     <img src="assets/images/top-picks.jpg" alt="Top Picks">
     <h4>Top Picks</h4>
   </md-grid-tile>
 
-  <md-grid-tile class="image">
+  <md-grid-tile class="image" routerLink="poetry">
     <img src="assets/images/poetry.jpg" alt="Poetry">
     <h4>Poetry</h4>
   </md-grid-tile>
 
-  <md-grid-tile class="image">
+  <md-grid-tile class="image" routerLink="classics">
     <img src="assets/images/classics.jpg" alt="Classics">
     <h4>Classics</h4>
   </md-grid-tile>
 
-  <md-grid-tile class="image">
+  <md-grid-tile class="image" routerLink="blog">
     <img src="assets/images/blog.jpg" alt="Blog">
     <h4>Blog</h4>
   </md-grid-tile>
 
-  <md-grid-tile class="image">
+  <md-grid-tile class="image" routerLink="magazines">
     <img src="assets/images/magazines.jpg" alt="Magazines">
     <h4>Magazines</h4>
   </md-grid-tile>
