--- a/src/app/poetry/poetry.component.html
+++ b/src/app/poetry/poetry.component.html
@@ -1,3 +1,117 @@
-<p>
-  poetry works!
-</p>
+<body>
+    <img src="assets/images/poetry2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
+
+    <h1>Poetry</h1>
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://0.ptlp.co/pratilipi/cover?pratilipiId=6715481055559680&amp;version=1491401633527&amp;width=100&amp;quality=low&amp;type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>मेरी कहानी</h4>
+            <div style="margin-bottom: 10px;">प्रिन्स सैनी</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    113<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    5.3<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://2.ptlp.co/pratilipi/cover?pratilipiId=4721069771456512&version=1487398838945&width=200&quality=low&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>फरवरी का महीना</h4>
+            <div style="margin-bottom: 10px;">लव चौधरी</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    65<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.8<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://1.ptlp.co/pratilipi/cover?pratilipiId=4971935480938496&version=1482844846486&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>इस गाढ़ी रात में</h4>
+            <div style="margin-bottom: 10px;">शुभम् श्रीवास्तव ओम</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    40<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    3.5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://0.ptlp.co/pratilipi/cover?pratilipiId=5674485478850560&version=1447501833953&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>खुलेआम प्यार</h4>
+            <div style="margin-bottom: 10px;">रूपा सिंह</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    581<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    3<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+</body>
