--- a/src/app/top-picks/top-picks.component.html
+++ b/src/app/top-picks/top-picks.component.html
@@ -1,3 +1,117 @@
-<p>
-  top-picks works!
-</p>
+<body>
+    <img src="assets/images/top-picks2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
+
+    <h1>Poetry</h1>
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://2.ptlp.co/pratilipi/cover?pratilipiId=6592368210870272&version=1495174043299&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>अंगूर खट्टे है</h4>
+            <div style="margin-bottom: 10px;">अभिनव त्रिपाठी</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    3729<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.9<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://1.ptlp.co/pratilipi/cover?pratilipiId=5732998783696896&version=1421387461604&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>छोटी हवेली</h4>
+            <div style="margin-bottom: 10px;">शील निगम</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    43,496<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    2.5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://4.ptlp.co/pratilipi/cover?pratilipiId=5636953047302144&version=1459847720424&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>एक थी माया</h4>
+            <div style="margin-bottom: 10px;">विजय कुमार सपत्ती</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    57,103<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.8<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://2.ptlp.co/pratilipi/cover?pratilipiId=4854626755018752&version=1448096467111&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>दूसरा ताजमहल</h4>
+            <div style="margin-bottom: 10px;">नासिरा शर्मा</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    13,077<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.7<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+</body>
