--- a/src/app/classics/classics.component.html
+++ b/src/app/classics/classics.component.html
@@ -1,3 +1,117 @@
-<p>
-  classics works!
-</p>
+<body>
+    <img src="assets/images/classics2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
+
+    <h1>Classics</h1>
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://2.ptlp.co/pratilipi/cover?pratilipiId=5157903266742272&version=1427431718211&width=200&quality=low&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>अलिफ लैला</h4>
+            <div style="margin-bottom: 10px;">अग्यात</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    88,230<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    3<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://4.ptlp.co/pratilipi/cover?pratilipiId=5082834486165504&version=1418368685600&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>अनिष्ट शंका</h4>
+            <div style="margin-bottom: 10px;">मुंशी प्रेमचंद</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    3,704<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://4.ptlp.co/pratilipi/cover?pratilipiId=5740087962763264&version=1425536912926&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>दुर्गा का मन्दिर</h4>
+            <div style="margin-bottom: 10px;">मुंशी प्रेमचंद</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    2,470<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.3<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://0.ptlp.co/pratilipi/cover?pratilipiId=5713857525841920&version=1462950793375&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>काबुलीवाला</h4>
+            <div style="margin-bottom: 10px;">रबीन्द्रनाथ ठाकुर</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    3,864<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    3.7<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+</body>
