--- a/src/app/top-picks/top-picks.component.html
+++ b/src/app/top-picks/top-picks.component.html
@@ -1,7 +1,7 @@
 <body>
     <img src="assets/images/top-picks2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
 
-    <h1>Poetry</h1>
+    <h1>Top-Picks</h1>
     <hr>
     <div class='container'>
         <div>
