--- a/src/app/magazines/magazines.component.html
+++ b/src/app/magazines/magazines.component.html
@@ -1,3 +1,117 @@
-<p>
-  magazines works!
-</p>
+<body>
+    <img src="assets/images/classics2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
+
+    <h1>Magazines</h1>
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://4.ptlp.co/pratilipi/cover?pratilipiId=5119868937437184&version=1478860271923&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>प्रतिलिपि लेखनी ; स्त्री शक्ति अंक</h4>
+            <div style="margin-bottom: 10px;">टीम प्रतिलिपि</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    6.5K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.6<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://0.ptlp.co/pratilipi/cover?pratilipiId=6649513115648000&version=1484752370751&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>विश्वगाथा</h4>
+            <div style="margin-bottom: 10px;">पंकज त्रिवेदी</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    651<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://3.ptlp.co/pratilipi/cover?pratilipiId=5835799404740608&version=1441098527692&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>समाधान</h4>
+            <div style="margin-bottom: 10px;">उम्मेदसिंह बैद</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    1.9K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    3.3<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://2.ptlp.co/pratilipi/cover?pratilipiId=5068004410785792&version=1456830084409&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>प्रतिलिपि लेखनी</h4>
+            <div style="margin-bottom: 10px;">टीम प्रतिलिपि</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    2.8K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.7<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+</body>
