--- a/src/app/genres/genres.component.html
+++ b/src/app/genres/genres.component.html
@@ -1,3 +1,117 @@
-<p>
-  genres works!
-</p>
+<body>
+    <img src="assets/images/genres2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
+
+    <h1>Magazines</h1>
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://1.ptlp.co/pratilipi/cover?pratilipiId=5744573689102336&version=1453456488414&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>अपूर्ण प्रेम</h4>
+            <div style="margin-bottom: 10px;">अग्यात</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    14.4K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://0.ptlp.co/pratilipi/cover?pratilipiId=6649513115648000&version=1484752370751&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>विश्वगाथा</h4>
+            <div style="margin-bottom: 10px;">पंकज त्रिवेदी</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    651<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://2.ptlp.co/pratilipi/cover?pratilipiId=5087685049843712&version=1453367382233&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>स्लीपिंग ब्यूटी</h4>
+            <div style="margin-bottom: 10px;">अग्यात</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    34.9K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://1.ptlp.co/pratilipi/cover?pratilipiId=5650532528029696&version=1452620566238&width=100&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>चम्पा और बाँस</h4>
+            <div style="margin-bottom: 10px;">अग्यात</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    18.8K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+</body>
