--- a/src/app/magazines/magazines.component.html
+++ b/src/app/magazines/magazines.component.html
@@ -1,5 +1,5 @@
 <body>
-    <img src="assets/images/classics2.jpg" style="display: block; width:100%; height: 100%; object-fit: cover;">
+    <img src="assets/images/magazines2.png" style="display: block; width:100%; height: 100%; object-fit: cover;">
 
     <h1>Magazines</h1>
     <hr>
