--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,117 @@
-<p>
-  blog works!
-</p>
+<body>
+    <img src="assets/images/magazines2.png" style="display: block; width:100%; height: 100%; object-fit: cover;">
+
+    <h1>Blogs</h1>
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://3.ptlp.co/pratilipi/cover?pratilipiId=4969687220748288&version=1495015925012&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>इति कृतम</h4>
+            <div style="margin-bottom: 10px;">अशोक  गुप्ता </div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    1.5K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://3.ptlp.co/pratilipi/cover?pratilipiId=5687623635959808&version=1492776191377&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>अपने-अपने हिस्से की धूप</h4>
+            <div style="margin-bottom: 10px;">कल्पना रामानी</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    4.5K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.4<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://1.ptlp.co/pratilipi/cover?pratilipiId=6553674801217536&version=1436716955817&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>वासना की कड़ियाँ</h4>
+            <div style="margin-bottom: 10px;">मुंशी प्रेमचंद</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    101.9K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.5<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+    <hr>
+    <div class='container'>
+        <div>
+            <img class='imageDetails' src="https://3.ptlp.co/pratilipi/cover?pratilipiId=4872221772218368&version=1417584833944&width=200&quality=high&type=webp">
+        </div>	
+
+        <div style="margin-left: 60px;">
+            <h4>बड़े घर की बेटी</h4>
+            <div style="margin-bottom: 10px;">मुंशी प्रेमचंद</div>
+
+            <span>
+                <span style="margin-right: 20px;">
+                    18K<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">remove_red_eye</i>
+                </span>
+                
+                <span style="margin-left: 20px; position: absolute;">
+                    4.8<i class="material-icons" style="position: absolute; margin-top: -5px; margin-left: 5px;">grade</i>
+                </span>
+            </span>
+
+            <br><br>
+            <div style="float:right; margin-right: 10px;">
+                <i class="material-icons" style="margin-right: 20px;">bookmark_border</i>
+                <i class="material-icons">share</i>
+            </div>
+        </div>
+    </div>
+
+</body>
