explore image spacing

--- a/src/app/explore/explore.component.css
+++ b/src/app/explore/explore.component.css
@@ -1,14 +1,10 @@
-/*.image {
-	position: relative;
-	width: 50%;
-	padding-top: 50%;
-}*/
-
 h4 { 
    position: absolute; 
 	 color: white;
 }
 
-/*img {
-	padding: 10px;
-}*/
+img {
+	width: 95%;
+	height: 95%;
+	border-radius: 3%;
+}
