--- a/src/app/explore/explore.component.html
+++ b/src/app/explore/explore.component.html
@@ -1,5 +1,5 @@
-<md-grid-list cols="2" md-gutter-gt-md="60px" md-gutter-md="30px" md-gutter-sm="2px" md-row-height="1:1">
-  <md-grid-tile class="image" routerLink="genres">
+<md-grid-list cols="2" md-gutter-gt-md="60px" md-gutter-md="30px" md-gutter-sm="2px" md-gutter="5px" md-row-height="1:1">
+  <md-grid-tile class="image" routerLink="genres" style="margin-right: 5px;">
     <img src="assets/images/genres.jpg" alt="Genres">
     <h4>Genres</h4>
   </md-grid-tile>
